fixes Documents layout on mobile

--- a/src/components/Documents/Documents.module.css
+++ b/src/components/Documents/Documents.module.css
@@ -51,8 +51,4 @@
     height: 230px;
     margin-top: 0;
   }
-
-  .title {
-    margin-right: 17px;
-  }
 }
